--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="social-links">
                     <img class="link instagramLink" src="images/instagram.png" alt="instagram">
                     <img class="link whatsappLink" src="images/whats.png" alt="whatsapp">
-                    <button class="link whatsappLink" id="submit-whatsapp">Garanta já sua data</button>
+                    <button class="link whatsappLink">Garanta já sua data</button>
                 </div>
             </div>
 
@@ -39,6 +39,14 @@
             </div>  
         </div>
     </div>
-    
+<br>
+    <div class="carrossel">
+        <object type="text/html" data="/carrossel.html"> 
+    </div>
+
+    <div class="contatos">
+        <object type="text/html" data="/contatos.html">
+    </div>
+
 </body>
 </html>
