--- a/contatos.html
+++ b/contatos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conexão TOTAL :: Garanta já a sua data!</title>
     <link rel='stylesheet' type='text/css' media='screen' href='./contatos.css'>
+    <script defer src="./script.js"></script>
 </head>
 
 <body>
@@ -23,11 +24,11 @@
 
          <div class="social-links">
 
-             <p id="siga-nos"><span>SIGA-NOS</span></p>
-             <img src="images/instagram.png" alt="Instagram">
-             <img src="images/face.png" alt="Facebook">
-             <img src="images/whats.png" alt="Whatsapp">
-             <button id="submit-whatsapp">Garanta já sua data</button>
+             <p id="siga-nos"><span>SIGA-NOS:</span></p>
+             <img class="link instagramLink" src="images/instagram.png" alt="Instagram">
+             <img class="link faceLink" src="images/face.png" alt="Facebook">
+             <img class="link whatsappLink" src="images/whats.png" alt="Whatsapp">
+             <button class="link whatsappLink" id="submit-whatsapp">Garanta já sua data</button>
                
          </div>
 
@@ -42,18 +43,18 @@
 
              <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
              <img id="eu" src="images/jocel2.png" alt="Jocel Vargas">
-             <img id="ej200" src="images/EJ200.gif" alt="Toque Minhas Músicas">
+             <img class="link cifraClubLink" id="ej200" src="images/EJ200.gif" alt="Toque Minhas Músicas">
              <p id="parte-do-show"><span>Você faz parte do SHOW</span></p>
-             <p id="toque"><span>Toque Minhas Músicas</span></p>
+             <p id="toque" class="link cifraClubLink"><span>Toque Minhas Músicas</span></p>
     
         </div>   
 
         <div class="media-links">
 
-             <img src="images/spotify.png" alt="Spotify">
-             <img src="images/youtube.png" alt="Youtube">
-             <img src="images/apple.png" alt="Apple">
-             <img src="images/deezer.png" alt="Deezer">
+             <img class="link spotifyLink" src="images/spotify.png" alt="spotify">
+             <img class="link youtubeLink" src="images/youtube.png" alt="youtube">
+             <img class="link appleLink" src="images/apple.png" alt="apple">
+             <img class="link deezerLink" src="images/deezer.png" alt="deezer">
 
         </div>
 
