atualizacao Google Tag

--- a/contatos.html
+++ b/contatos.html
@@ -7,6 +7,24 @@
     <title>Conexão TOTAL :: Garanta já a sua data!</title>
     <link rel='stylesheet' type='text/css' media='screen' href='./contatos.css'>
     <script defer src="./script.js"></script>
+    <script>
+        (function(w, d, s, l, i) {
+          w[l] = w[l] || [];
+          w[l].push({
+            'gtm': i,
+            'id': 'AW-11333304860',
+            'v': '1'
+          });
+          (function() {
+            var s = d.createElement(s);
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = l + '/gtm.js';
+            var x = d.getElementsByTagName(s)[0];
+            x.parentNode.insertBefore(s, x);
+          })();
+        })(window, document, 'script', 'https://www.googletagmanager.com/gtag/js?id=AW-{ID_DA_TAG_DO_GOOGLE}');
+      </script>      
 </head>
 
 <body>
@@ -28,7 +46,7 @@
              <img class="link instagramLink" src="images/instagram.png" alt="Instagram">
              <img class="link faceLink" src="images/face.png" alt="Facebook">
              <img class="link whatsappLink" src="images/whats.png" alt="Whatsapp">
-             <button class="link whatsappLink" id="submit-whatsapp">Garanta já sua data</button>
+             <button class="link whatsappLink">Garanta já sua data</button>
                
          </div>
 
