--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conexão TOTAL :: VOCÊ faz parte do show!</title>
+    <script>
+        (function(w, d, s, l, i) {
+          w[l] = w[l] || [];
+          w[l].push({
+            'gtm': i,
+            'id': 'AW-11333304860',
+            'v': '1'
+          });
+          (function() {
+            var s = d.createElement(s);
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = l + '/gtm.js';
+            var x = d.getElementsByTagName(s)[0];
+            x.parentNode.insertBefore(s, x);
+          })();
+        })(window, document, 'script', 'https://www.googletagmanager.com/gtag/js?id=AW-{ID_DA_TAG_DO_GOOGLE}');
+    </script>      
     <link rel='stylesheet' type='text/css' media='screen' href='./styles.css'>
     <script defer src='./script.js'></script>
 </head>
