--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->     
     <link rel='stylesheet' type='text/css' media='screen' href='./styles.css'>
+    <link rel="stylesheet" href="reset.css">
     <script defer src='./script.js'></script>
 </head>
 <body>
