--- a/contatos.html
+++ b/contatos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conexão TOTAL :: Garanta já a sua data!</title>
     <link rel='stylesheet' type='text/css' media='screen' href='./contatos.css'>
+    <link rel="stylesheet" href="reset.css">
     <script defer src="./script.js"></script>
     <script>
         (function(w, d, s, l, i) {
