--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
         </div>
 
         <div class="direita">
-            <div class="video">
                 <iframe class="iframevideo" src="https://www.youtube.com/embed/G6Zmt4vgcNk"></iframe>
-            </div>
-
             <div class="media-links">
                 <img class="link spotifyLink" src="images/spotify.png" alt="spotify">
                 <img class="link youtubeLink" src="images/youtube.png" alt="youtube">
@@ -79,11 +76,11 @@
     </div>
     </div>
     <div class="pagina2">
-    <iframe src="/carrossel.html"  scrolling="no"; style="overflow: hidden; border: transparent; height: 100%; width: 88%; border: transparent;"></iframe>
+    <iframe src="/carrossel.html"  scrolling="no"; style="overflow: hidden; height: 100%; width: 100%; border: transparent;"></iframe>
     </div>
 
     <div class="pagina3">
-    <iframe src="/contatos.html" style="overflow: hidden; border: transparent; height: 80%; width: 300%;"></iframe>
+    <iframe src="/contatos.html" style="overflow: hidden; height: 100%; width: 100%; border: transparent;"></iframe>
     </div>
 
 </body>
