--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="pagina3">
-    <iframe src="/contatos.html" style="overflow: hidden; height: 100%; width: 100%; border: transparent;"></iframe>
+    <iframe src="/contatos.html" style="height: 100%; width: 100%; border: transparent;"></iframe>
     </div>
 
 </body>
