--- a/contatos.html
+++ b/contatos.html
@@ -74,22 +74,18 @@
     <div class="direita">
          
         <div class="sobrepostos">
-
-             <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
-             <img id="eu" src="images/jocel2.png" alt="Jocel Vargas">
-             <img class="link cifraClubLink" id="ej200" src="images/EJ200.gif" alt="Toque Minhas Músicas">
-             <p id="parte-do-show"><span>Você faz parte do SHOW</span></p>
-             <p id="toque" class="link cifraClubLink"><span>Toque Minhas Músicas</span></p>
-    
+          <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
+          <img id="eu" src="images/jocel2.png" alt="Jocel Vargas">
+          <img class="link cifraClubLink" id="ej200" src="images/EJ200.gif" alt="Toque Minhas Músicas">
+          <p id="parte-do-show"><span>Você faz parte do SHOW</span></p>
+          <p id="toque" class="link cifraClubLink"><span>Toque Minhas Músicas</span></p>
         </div>   
 
         <div class="media-links">
-
-             <img class="link spotifyLink" src="images/spotify.png" alt="spotify">
-             <img class="link youtubeLink" src="images/youtube.png" alt="youtube">
-             <img class="link appleLink" src="images/apple.png" alt="apple">
-             <img class="link deezerLink" src="images/deezer.png" alt="deezer">
-
+          <img class="link spotifyLink image" src="images/spotify.png" alt="spotify">
+          <img class="link youtubeLink image" src="images/youtube.png" alt="youtube">
+          <img class="link appleLink image" src="images/apple.png" alt="apple">
+          <img class="link deezerLink image" src="images/deezer.png" alt="deezer">
         </div>
 
     </div>
