--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="direita">
                 <iframe class="iframevideo" src="https://www.youtube.com/embed/G6Zmt4vgcNk"></iframe>
                 <div class="media-links">
-                    <img class="link spotifyLink" src="images/spotify.png" alt="spotify">
-                    <img class="link youtubeLink" src="images/youtube.png" alt="youtube">
-                    <img class="link appleLink" src="images/apple.png" alt="apple">
-                    <img class="link deezerLink" src="images/deezer.png" alt="deezer">
+                    <img class="link spotifyLink image" src="images/spotify.png" alt="spotify">
+                    <img class="link youtubeLink image" src="images/youtube.png" alt="youtube">
+                    <img class="link appleLink image" src="images/apple.png" alt="apple">
+                    <img class="link deezerLink image" src="images/deezer.png" alt="deezer">
                 </div>  
         </div>
     
