--- a/index.html
+++ b/index.html
@@ -40,6 +40,85 @@
 </head>
 
 <body>
+<!-- para pesquisas do google -->
+<h1>aniversário</h1>
+<h1>aniversários</h1>
+<h1>artista</h1>
+<h1>artista porto alegre</h1>
+<h1>atração</h1>
+<h1>atração para eventos corporativos</h1>
+<h1>atração para eventos corporativos</h1>
+<h1>atração para formaturas</h1>
+<h1>banda ao vivo</h1>
+<h1>banda de porto alegre</h1>
+<h1>banda para aniversário</h1>
+<h1>banda de bar</h1>
+<h1>banda para casamentos</h1>
+<h1>banda para eventos</h1>
+<h1>banda para festas</h1>
+<h1>banda para formaturas</h1>
+<h1>cantor</h1>
+<h1>cantor 1000 barreiras</h1>
+<h1>cantor Escada dos Sentimentos</h1>
+<h1>cantor para aniversários</h1>
+<h1>cantor de porto alegre</h1>
+<h1>cantor pop</h1>
+<h1>cantor sertanejo</h1>
+<h1>carreira musical</h1>
+<h1>conexão total</h1>
+<h1>confraternização</h1>
+<h1>entretenimento</h1>
+<h1>entretenimento para casamentos</h1>
+<h1>entretenimento para eventos</h1>
+<h1>entretenimento para eventos corporativos</h1>
+<h1>entretenimento para eventos corporativos</h1>
+<h1>empresarial</h1>
+<h1>evento</h1>
+<h1>evento ao vivo</h1>
+<h1>evento interativo</h1>
+<h1>evento empresarial</h1>
+<h1>eventos corporativos</h1>
+<h1>fama</h1>
+<h1>feira</h1>
+<h1>feiras</h1>
+<h1>formatura</h1>
+<h1>happy hour</h1>
+<h1>interação</h1>
+<h1>interativo</h1>
+<h1>mix</h1>
+<h1>mpb</h1>
+<h1>música</h1>
+<h1>músico</h1>
+<h1>música ao vivo</h1>
+<h1>música para aniversários</h1>
+<h1>músico de barzinho</h1>
+<h1>música para casamentos</h1>
+<h1>música para empresas</h1>
+<h1>música ao vivo para eventos</h1>
+<h1>música para eventos corporativos</h1>
+<h1>música para festas</h1>
+<h1>música para formaturas</h1>
+<h1>música ao vivo porto alegre</h1>
+<h1>música ao vivo porto alegre</h1>
+<h1>música ao vivo sertanejo</h1>
+<h1>música para aniversários</h1>
+<h1>música casamentos</h1>
+<h1>música para barzinho</h1>
+<h1>música para eventos corporativos</h1>
+<h1>música para formaturas</h1>
+<h1>pop</h1>
+<h1>pop-rock</h1>
+<h1>sertanejo</h1>
+<h1>shows ao vivo</h1>
+<h1>shows para casamentos</h1>
+<h1>shows para empresas</h1>
+<h1>shows para eventos</h1>
+<h1>shows para festas</h1>
+<h1>shows em porto alegre</h1>
+<h1>shows ao vivo sertanejo</h1>
+<h1>sucesso</h1>
+<h1>todos os generos musicais</h1>
+<h1>voz</h1>
     <!-- home -->
     <div class="home">
         <div class="topo">
@@ -114,7 +193,6 @@
       
     </div>
     <!-- fim contatos -->
-
 </body>
 
 </html>
