--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="sociais-inicio">
             <img class="link instagramLink space-h" src="images/instagram.png" alt="instagram">
             <img class="link whatsappLink space-h" src="images/whats.png" alt="whatsapp">
-            <button class="link whatsappLink space-h" id="garanta">Garanta já sua data</button>
+            <button class="link whatsappLink space-h">Garanta já sua data</button>
         </div>
 
     </div>
@@ -188,7 +188,7 @@
            <img class="link instagramLink space-h" src="images/instagram.png" alt="Instagram">
            <img class="link faceLink space-h" src="images/face.png" alt="Facebook">
            <img class="link whatsappLink space-h" src="images/whats.png" alt="Whatsapp">
-           <button class="link whatsappLink" id="garanta">Garanta já sua data</button>       
+           <button class="link whatsappLink">Garanta já sua data</button>       
        </div>
       
     </div>
