--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="sociais-inicio">
             <img class="link instagramLink space-h" src="images/instagram.png" alt="instagram">
             <img class="link whatsappLink space-h" src="images/whats.png" alt="whatsapp">
-            <button class="link whatsappLink space-h">Garanta já sua data</button>
+            <button class="link whatsappLink space-h button-inicio">Garanta já sua data</button>
         </div>
 
     </div>
@@ -189,9 +189,8 @@
             <img class="link instagramLink space-h" src="images/instagram.png" alt="Instagram">
             <img class="link faceLink space-h" src="images/face.png" alt="Facebook">
             <img class="link whatsappLink space-h" src="images/whats.png" alt="Whatsapp">
-            <button class="link whatsappLink">Garanta já sua data</button>
         </div>
-
+        <button class="link whatsappLink button-fim">Garanta já sua data</button>
     </div>
     <!-- fim contatos -->
 </body>
