--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
 
         <div class="sociais-fim">
-            <span id="siga-nos">SIGA-NOS:</span>
+            <span id="siga-nos">SIGA-NOS:&nbsp;</span>
             <img class="link instagramLink space-h" src="images/instagram.png" alt="Instagram">
             <img class="link faceLink space-h" src="images/face.png" alt="Facebook">
             <img class="link whatsappLink space-h" src="images/whats.png" alt="Whatsapp">
