--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <img class="link faceLink space-h" src="images/face.png" alt="Facebook">
             <img class="link whatsappLink space-h" src="images/whats.png" alt="Whatsapp">
         </div>
-        <button class="link whatsappLink button-fim">Garanta já sua data</button>
+        <button class="link whatsappLink button-fim" id="garanta">Garanta já sua data</button>
     </div>
     <!-- fim contatos -->
 </body>
