--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 
         <div class="sociais-fim">
             <span id="siga-nos">SIGA-NOS:&nbsp;</span>
-            <img class="link instagramLink space-h" src="images/instagram.png" alt="Instagram">
-            <img class="link faceLink space-h" src="images/face.png" alt="Facebook">
-            <img class="link whatsappLink space-h" src="images/whats.png" alt="Whatsapp">
+            <img class="link instagramLink space-h" id="space" src="images/instagram.png" alt="Instagram">
+            <img class="link faceLink space-h" id="space" src="images/face.png" alt="Facebook">
+            <img class="link whatsappLink space-h" id="space" src="images/whats.png" alt="Whatsapp">
         </div>
         <button class="link whatsappLink button-fim" id="garanta">Garanta já sua data</button>
     </div>
