--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <span id="parte-do-show">Você faz parte do SHOW</span>
             <span id="toque" class="link cifraClubLink">Toque Minhas Músicas</span>
             <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
-            <img id="eu" src="images/jocel.png" alt="Jocel Vargas">
+          <!--  <img id="eu" src="images/jocel.png" alt="Jocel Vargas"> -->
             <img id="eu2" src="images/jocel2.png" alt="Jocel Vargas">
         </div>
 
