--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <img id="eu" src="images/jocel.png" alt="Jocel Vargas">
             <img id="eu2" src="images/jocel2.png" alt="Jocel Vargas">
         </div>
-
+git
         <div class="musica-fim">
             <img class="link spotifyLink space" src="images/spotify.png" alt="spotify">
             <img class="link youtubeLink space" src="images/youtube.png" alt="youtube">
