--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <span id="toque" class="link cifraClubLink">Toque Minhas Músicas</span>
             <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
             <img id="eu" src="images/jocel.png" alt="Jocel Vargas">
-            <img id="eu2" src="images/jocel2.png" alt="Jocel Vargas">
+            <img id="eu-mob" src="images/jocel-mob.png" alt="Jocel Vargas">
         </div>
 git
         <div class="musica-fim">
