--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="sobrepostos">
             <img class="link cifraClubLink" id="ej200" src="images/EJ200.gif" alt="Toque Minhas Músicas">
             <span id="parte-do-show">Você faz parte do SHOW</span>
-            <span id="toque" class="link cifraClubLink">Toque Minhas Músicas</span>
+            <span id="toque" class="link cifraClubLink ej">Toque Minhas Músicas</span>
             <img id="quadro" src="images/cantos_quadro.png" alt="Jocel Vargas">
             <img id="eu" src="images/jocel.png" alt="Jocel Vargas">
             <img id="eu-mob" src="images/jocel-mob.png" alt="Jocel Vargas">
